--- a/home.css
+++ b/home.css
@@ -661,6 +661,10 @@ footer a{
     .navbar_div{
         margin-bottom: 5px;
     }
+    .scroll_btn {
+        width: 9vw;
+        right: 13px;
+    }
     .footer{
         height: 118vh;
     }
